style: fix for firefox dark mode

--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -16,7 +16,7 @@
   @media screen and (min-width: 996px) {
     justify-content: center;
     align-items: center;
-    color: initial;
+    color: inherit;
 
     padding: 0;
 
